# upgrade-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CI.md  ROADMAP.md
evals/: __init__.py  runner.py
evals/cases/: chai-like-generate-tests.json  chai-like-mocha-upgrade.json  chai-like-research-upgrade.json  chai-like-upgrade-all.json  sample-generate-tests.json  sample-improve-tests.json  sample-mocha-upgrade.json  sample-research-upgrade.json  sample-upgrade-all.json
src/refactor_agent/: __init__.py
src/refactor_agent/cli/: __init__.py  ui.py
src/refactor_agent/core/: __init__.py  context.py  llm_client.py  react_loop.py  types.py
src/refactor_agent/orchestrator/: __init__.py  upgrade_graph.py
src/refactor_agent/skills/: __init__.py  prompts.py
src/refactor_agent/skills/add_tests/: __init__.py  prompts.py
src/refactor_agent/tools/: __init__.py  changelog.py  fs.py  git.py  npm.py
src/upgrade_dependencies_agent/: __init__.py
src/upgrade_dependencies_agent/cli/: __init__.py  ui.py
src/upgrade_dependencies_agent/core/: __init__.py  context.py  llm_client.py  react_loop.py  runtime_state.py  structured.py  trace.py  types.py
src/upgrade_dependencies_agent/orchestrator/: __init__.py  preflight.py  state.py  upgrade_backbone.py  upgrade_graph.py  upgrade_workflow.py
src/upgrade_dependencies_agent/skills/: __init__.py  fragments.py  metrics.py  prompts.py  rendering.py
src/upgrade_dependencies_agent/skills/add_tests/: __init__.py  prompts.py
src/upgrade_dependencies_agent/tools/: __init__.py  _common.py  changelog.py  fs.py  git.py  npm.py  shell.py
tests/: test_cli.py  test_cli_ui.py  test_context.py  test_eval_case_fixtures.py  test_evals_runner.py  test_llm_client.py  test_preflight.py  test_prompt_contracts.py  test_prompt_metrics.py  test_prompt_renderer.py  test_runtime_guardrails.py  test_structured.py  test_tools.py  test_types.py  test_upgrade_backbone.py  test_upgrade_graph.py  test_upgrade_graph_state.py  test_upgrade_workflow.py
